[tool.poetry]
name = "pyBusPirate"
version = "2.0.0"
description = "Library for the Dangerous Prototypes Bus Pirate"
license = "GPL-2.0-only"
authors = ["Sean Nelson <audiohacked@gmail.com>"]
readme = "README.md"
repository = "https://github.com/audiohacked/python-pyBusPirate"
keywords = [
    "BusPirate"
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
packages = [
    { include = "buspirate", from="src" }
]

[tool.poetry.dependencies]
python = "^3.6.2"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"
pytest-cov = "^2.12.1"
tox = "^3.23.1"
pylint = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
